--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==1.26.4
-pandas==2.2.2
-matplotlib==3.7.5
-seaborn==0.12.2
+numpy>=1.24.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
 requests>=2.31.0
 streamlit>=1.22.0
 plotly>=5.14.0
