--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,9 +2,9 @@ version: '3.8'
 
 services:
   code-audit-system:
-    build: 
+    build:
       context: .
-      dockerfile: docker/Dockerfile
+      dockerfile: Dockerfile.prod
     ports:
       - "8501:8501"
     environment:
@@ -18,3 +18,14 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - code-audit-system
+    restart: unless-stopped
