--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy>=1.24.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-requests>=2.31.0
-streamlit>=1.22.0
-plotly>=5.14.0
-GitPython>=3.1.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.2
+requests==2.31.0
+httpx==0.25.1
+python-multipart==0.0.6
+sqlalchemy==2.0.23
+aiosqlite==0.19.0
+python-dotenv==1.0.0
