--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,5 +18,5 @@ COPY . .
 # Expose FastAPI port
 EXPOSE 8000
 
-# Run the application
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application (using shell form to expand $PORT)
+CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
