--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ python-multipart==0.0.6
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 python-dotenv==1.0.0
+psycopg2-binary==2.9.9
+groq==0.4.2
+pytest==7.4.3
+pytest-asyncio==0.21.1
