--- a/render.yaml
+++ b/render.yaml
@@ -11,10 +11,12 @@ services:
         fromDatabase:
           name: code-audit-db
           property: connectionString
-      - key: GROQ_API_KEY
-        sync: false # Set this in Render Dashboard later
+      - key: RENDER
+        value: "true"
       - key: PORT
-        value: 10000
+        value: "10000"
+    healthCheckPath: /
+
 
 # Database
 databases:
