Remove explicit `dockerfilePath` and simplify `dockerContext` path in `render.yaml`.

--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,7 @@ services:
   - type: web
     name: code-audit-ai-backend
     env: docker
-    dockerContext: ./backend
-    dockerfilePath: Dockerfile
+    dockerContext: backend
     plan: free
     envVars:
       - key: DATABASE_URL
