feat: Replace `dockerContext` with `rootDir` for backend service configuration.

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
-  # Backend Web Service
   - type: web
     name: code-audit-ai-backend
     env: docker
-    dockerContext: backend
+    rootDir: backend
     plan: free
     envVars:
       - key: DATABASE_URL
@@ -16,8 +15,6 @@ services:
         value: "10000"
     healthCheckPath: /
 
-
-# Database
 databases:
   - name: code-audit-db
     plan: free
