--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # 1. Backend API Service
   - type: web
     name: code-audit-ai-backend
     env: docker
@@ -15,6 +16,19 @@ services:
         value: "10000"
     healthCheckPath: /
 
+  # 2. Frontend Static Site
+  - type: static
+    name: code-audit-ai-frontend
+    env: static
+    rootDir: frontend
+    plan: free
+    buildCommand: "" # No build needed for vanilla HTML/JS
+    publishDir: "." # Serve everything from the frontend folder
+    envVars:
+      - key: IS_PRODUCTION
+        value: "true"
+
+# 3. Database
 databases:
   - name: code-audit-db
     plan: free
