--- a/render.yaml
+++ b/render.yaml
@@ -21,6 +21,7 @@ services:
     name: code-audit-ai-frontend
     env: static
     rootDir: frontend
+    staticPublishDir: .
 
 # 3. Database
 databases:
