--- a/render.yaml
+++ b/render.yaml
@@ -13,15 +13,18 @@ services:
       - key: RENDER
         value: "true"
       - key: PORT
-        value: "10000"
+        value: "8000"
     healthCheckPath: /
 
-  # 2. Frontend Static Site
+  # 2. Frontend Web Service (Dockerized)
   - type: web
     name: code-audit-ai-frontend
-    env: static
+    env: docker
     rootDir: frontend
-    staticPublishDir: .
+    plan: free
+    envVars:
+      - key: PORT
+        value: "80"
 
 # 3. Database
 databases:
